Styling and social link changes

--- a/_sass/dsa/typescale.scss
+++ b/_sass/dsa/typescale.scss
@@ -49,6 +49,14 @@ p {
     font-size: var(--size-xs);
 }
 
+a {
+	font-family: "ManifoldDSA", sans-serif;
+}
+
+b {
+	font-family: "ManifoldDSA", sans-serif;
+}
+
 .size-xxl {
     font-size: var(--size-xxl);
 }
