--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 <header class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
   <nav class="container">
     <!-- site home -->
-    <a class="navbar-brand" href="{{ '/' | absolute_url }}">
+    <a class="navbar-brand" href="https://westsound.dsachapters.org/">
       <img class="my-auto mr-2" src="{{ site.logo | relative_url }}" alt="{{ site.title }} logo" height="32" width="64" style="object-fit:cover">
       <b>{{ owner.name }}</b>
     </a>
