change name to nicks website

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <!-- site home -->
     <a class="navbar-brand" href="{{ '/' | absolute_url }}">
       <img class="my-auto mr-2" src="{{ site.logo | relative_url }}" alt="{{ site.title }} logo" height="32" width="64" style="object-fit:cover">
-      <b>{{ owner.name }}</b>
+      <b>Nick's Website</b>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
       aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
