--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
   <nav class="container">
     <!-- site home -->
     <a class="navbar-brand" href="https://westsound.dsachapters.org/">
-      <img class="my-auto mr-2" src="{{ site.logo | relative_url }}" alt="{{ site.title }} logo" height="32" width="64" style="object-fit:cover">
+      <img class="my-auto mr-2" src="{{ site.WSDSALogo_NoText2 | relative_url }}" alt="{{ site.title }} logo" height="32" width="64" style="object-fit:cover">
       <b>{{ owner.name }}</b>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
