--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -48,7 +48,8 @@ hr {
     }
 }
 
-ul {
+.page-footer ul,
+nav ul {
     list-style-type: none;
     line-height: 200%;
 
@@ -65,6 +66,20 @@ ul {
             text-decoration: none;
         }
     }
+}
+
+.blog-post-article ul,
+article ul {
+    list-style-type: disc;
+    padding-left: 1.5rem;
+    line-height: 200%;
+}
+
+.blog-post-article ol,
+article ol {
+    list-style-type: decimal;
+    padding-left: 1.5rem;
+    line-height: 200%;
 }
 
 p {
@@ -106,4 +121,12 @@ p {
     border: 1px solid var(--black-tint-4);
     padding: 10px;
     margin-bottom: 10px;
+    
+    .recent-post-item {
+        margin-bottom: 1rem !important;
+        
+        &:last-child {
+            margin-bottom: 0 !important;
+        }
+    }
 }
