--- a/_includes/blog-post-sidebar.html
+++ b/_includes/blog-post-sidebar.html
@@ -32,7 +32,7 @@
         <h4 class="m-0">Recent posts</h4>
         <hr />
         {% for post in site.posts limit:5 %}
-        <div class="row">
+        <div class="row recent-post-item">
             <div class="col-12">
                 <h6 class="my-0 text-black-tint-2">{{ post.date | date: "%b %-d, %Y" }}</h6>
                 <a class="my-0 text-black-tint-1" href="{{ post.url }}">{{ post.title }}</a>
